# marketplace

./: README.md
backend/: README.md  create_test_data.py  pyproject.toml  roles.json
backend/core/: permissions.py
backend/core/api/: viewsets.py
backend/marketplace/: admin.py  apps.py  models.py  signals.py  urls.py
backend/marketplace/api/: product_filter.py
backend/marketplace/migrations/: 0001_initial.py  0002_initial.py
backend/users/: admin.py  models.py
backend/users/api/: views.py
backend/users/migrations/: 0001_initial.py  0002_user_selling_access.py
frontend/core_ui/: .eslintrc.js  .prettierrc  modulefederation.config.js  package-lock.json  package.json  tsconfig.paths.json
frontend/core_ui/.storybook/: main.js  preview.js
frontend/marketplace_ui/: .gitignore  .prettierignore  editorconfig  modulefederation.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.paths.json  webpack.config.js
marketplace_backend/: README.md  pyproject.toml
marketplace_backend/core/: settings.py  urls.py
marketplace_backend/marketplace/: models.py  urls.py
marketplace_backend/marketplace/api/: product_filter.py  serializers.py  views.py
marketplace_backend/marketplace/api/product/: views.py
marketplace_backend/marketplace/api/seller/: views.py
marketplace_backend/marketplace/migrations/: 0003_alter_product_search_vector.py
marketplace_backend/users/: urls.py
marketplace_backend/users/api/: serializers.py
marketplace_core_ui/: package-lock.json  package.json  vite.config.ts
marketplace_core_ui/src/: App.tsx  index.css
(+29 files in other folders)
